--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 services:
   db:
     image: postgres:16
-    container_name: postgres_db
+    container_name: clinic_postgres
     restart: always
     ports:
       - "5432:5432"
