--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -23,5 +24,4 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
-  
 }
