--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts"
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "start": "node dist/app.js", 
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -24,4 +26,7 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
+
+  
+
 }
