--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
-    "start": "node dist/app.js", 
+    "start": "node dist/index.js",
     "build": "tsc"
   },
   "keywords": [],
