--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2017",                       // para suportar async/await e Object.values
     "module": "commonjs",
+    "lib": ["es2017"],                        // adiciona suporte às libs ES modernas
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,                     // ignora erros de tipagem em node_modules
+    "types": ["node", "express"]              // adiciona as tipagens necessárias
   },
   "include": ["src"]
 }
